--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
       <a href="#" class="logo" data-aos="fade-right" data-aos-easing="ease-in-out" data-aos-delay="400">LOOPX TECH</a>
       <button class="hamburger" id="hamburger"><i class="fas fa-bars"></i></button>
     <ul data-aos="fade-left" data-aos-easing="ease-in-out"  data-aos-delay="400" class="nav-ul" id="nav-ul">
-      <li><a href="#contact">Contact</a></li>
-      <li><a href="#services">Services</a></li>
       <li><a href="#about">About</a></li>
+      <li><a href="#services">Services</a></li>
+      <li><a href="#contact">Contact</a></li>
     </ul>
     </nav>
     </div>
@@ -111,7 +111,7 @@
 
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 <script>
-AOS.init();
+AOS.init({once:true});
 </script>
 <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
 <script type="text/javascript">
