--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
 <div id="contact" class="container5">
 <div data-aos="zoom-in" data-aos-easing="ease-in-out" data-aos-delay="200">
-  <h2><a href="https://www.instagram.com/chukkie_joex/" target="_blank"><i class="fab fa-instagram"></i></a> <a href="mailto:chukajoseph99@gmail.com" target="_blank"><i class="fab fa-google"></i></a> <a href="https://www.linkedin.com/in/chuka-joseph-199666205/" target="_blank"><i class="fab fa-linkedin-in"></i></a> <h2>
+  <h2><a href="https://github.com/Chukajoseph99" target="_blank"><i class="fab fa-github"></i></a> <a href="mailto:chukajoseph99@gmail.com" target="_blank"><i class="fab fa-google"></i></a> <a href="https://www.linkedin.com/in/chuka-joseph-199666205/" target="_blank"><i class="fab fa-linkedin-in"></i></a> <h2>
   </div>
   </div>
 
