--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
 
 <div align="center">
   <form data-aos="fade-down">
-  <h2 style="">LoopX Tech</h2>
-  <a class="button1" href="https://www.google.com/intl/en-GB/gmail/about/#" target="_blank" >Sign up with Google</a><br><br>
-    <a class="button2" href="https://www.google.com/" target="_blank">Sign up with Email</a>
-    <p>Already have an account? <a class="signIn"  href="https://www.google.com/" target="_blank"> sign in</a></p>
+  <h2>LoopX Tech</h2>
+  <a class="button1" href="https://www.loopxtech.ml">Sign up with Google</a><br><br>
+    <a class="button2" href="https://www.loopxtech.ml">Sign up with Email</a>
+    <p>Already have an account? <a class="signIn"  href="https://www.loopxtech.ml"> sign in</a></p>
     </form>
   </div>
 
@@ -47,7 +47,7 @@
 <div data-aos="fade-left" class="content">
 <h2>About LoopX Tech</h2>
 <p> <b>Loopx is a future oriented company that specializes in modern day technology. We deal in sales of tech accessories, UI, software development, web develpment and robotics.</b></p> 
-<p><b>We take pride in our large and very competent teams here at loopX as we love to closely work together with all of our clients updating them regularly during the design process to ensure the best results. Transparency between ourselves and our clients is key to a successful brand. </b></p>
+<p><b>We take pride in our large and very competent teams here at loopX as we love to closely work togeteher with all of our clients updating them regularly during the design process to ensure the best results. Transparency between ourselves and our clients is key to a successful brand. </b></p>
 </div>
 
 </div>
