--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     <img class="mySlides" src="https://cdn.pixabay.com/photo/2020/01/16/12/02/digitization-4770296__340.jpg">
     <img class="mySlides" src="https://cdn.pixabay.com/photo/2016/06/28/05/10/laptop-1483974__340.jpg">
   </div>
-    <h2 data-aos="fade-up" data-aos-easing="ease-in-out" data-aos-delay="300" style="color:white">For more information about LoopX visit our instagram page <a color="brown" href="https://www.instagram.com/chukkie_joex/" target="_blank">click here</a> or send a message to our email <a href="mailto:chukajoseph99@gmail.com" target="_blank">click here</a> </h2> 
+    <h2 data-aos="fade-up" data-aos-easing="ease-in-out" data-aos-delay="300" style="color:white">For more information about LoopX visit our linkedin page <a color="brown" href="https://www.linkedin.com/in/chukwuka-joseph-nwachukwu-199666205/" target="_blank">click here</a> or send a message to our email <a href="mailto:chukajoseph99@gmail.com" target="_blank">click here</a> </h2> 
   </div>
 
 
